# taxi

./: .gitignore  INSTALL.py  LICENSE  MANIFEST.in  README.md  adaptive_nstep.py  dispatch_tools.py  dispatcher.py  jobs.py  old_taxi.py  pool.py  run_taxi.py  run_tests.sh  setup.cfg  setup.py  task_runners.py  tasks.py  taxi.py  tox.ini
examples/: cu_multirep_hmc.py  cu_puregauge.py  cu_puregauge_example.py  cu_puregauge_with_multirep_spectro.py  cu_run_aux_jobs_on_existing_gauge.py  cu_singlerep_hmc.py  fnal_example.py  fnal_multirep_hmc.py  measure_mrep_spectro_on_files.py  wijay_test_spectro.py
examples/old/: cu_example.py  cu_example_adaptive.py  janus_example.py
examples/sample_data/: GaugeSU4_4_4_7.75_0.128_0.1285_1_0  gaugefiles
local/: .gitignore
local/cu/: local_taxi.py  local_util.py
local/fnal/: local_taxi.py  local_util.py
local/janus/: local_taxi.py  local_util.py  taxi.sh
local/scalar/: README.md  local_queue.py  local_taxi.py  sqlite_queue_runner.py  taxi.sh
local/summit/: local_taxi.py  local_util.py  taxi.sh
old/: dispatch_tools.py  manage_taxi_pool.py
old/runners/: SU4_nds_sextet.py  pure_gauge_ora.py
runners/: SU4_nds_fund.py  SU4_nds_mrep.py  SU4_nds_sextet.py  flow.py  hrpl.py  pure_gauge_ora.py  spectro.py
src/taxi/: _taxi.py  (+14 more)
tests/: itest_run_taxi.py  test_dispatch.py  test_file_conventions.py  test_pool.py  test_run_taxi.py  test_runners.py
tools/: add_taxi.py  adjust_script_req_time.py  change_nstep.py  deactivate.py  edit_cmd_line_arg.py  force_status.py  inspect_task.py  relaunch.py  rollback.py  summary.py  unfail.py
(+68 files in other folders)
