[metadata]
name = taxi
version = 0.2.0
description = A portable workflow manager for lattice gauge theory.
long_description = file: README.rst
keywords = workflow, lattice, automation
license = MIT License
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Scientific/Engineering

url = https://github.com/dchackett/taxi
author = Daniel Hackett and Ethan T. Neil
requires-dist = setuptools

[options]
machine = fake
packages = taxi
include_package_data = True
package_dir = 
    taxi=src/taxi
scripts = 
    bin/taxi.sh
    bin/run_taxi.py

[options.package_data]
* = *.txt, *.rst
taxi = taxi.sh

[options.packages.find]
exclude = 
    src.taxi.local